--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -297,35 +297,43 @@ On the other hand, language has a communicative function, and only \emph{predict
 In Expt.~3, we explore how knowledge of certain causal factors (e.g. the decision to retire; the development of an allergy) interacts with the past frequency of action to modulate the felicity of habitual sentences (e.g. \emph{John writes novels.}; \emph{John eats peanut butter.}).
 
 \subsection{Method}
+\begin{figure*}[t]
+\centering
+  \includegraphics[width=\textwidth]{truth-judgments-3items-withtj2.pdf}
+  \caption{}
+  \label{fig:tj3}
+\end{figure*}
 
 \subsubsection{Participants} 
 
-We recruited \red{150?} participants from MTurk, using the same criterion as Expt.~2.
-The experiment took \red{m} minutes on average on participants were compensated \$\red{d} for their work.
+We recruited 150 participants from MTurk, using the same criterion as Expt.~2.
+The experiment took 4 minutes on average on participants were compensated \$0.40 for their work.
 
 \subsubsection{Procedure}
 
-The procedure was identical to Expt.~1b except for the inclusion of a second sentence on a subset of trials. 
+The procedure was identical to Expt.~2 except for the inclusion of a second sentence on a subset of trials. 
 On all trials, participants were presented with a \emph{past frequency sentence} (see Expt.~2).
 Additionally, on one third of the trials, participants were presented with a \textbf{preventative sentence} (e.g. \emph{Yesterday, Bill quit smoking.}). %that aimed to decrease the acceptability of the habitual sentence (\emph{Bill smokes}).
 % even in the face of strong past frequency evidence (\emph{Last week, Bill smoked 3 times.}).
 On one third of the trials, participants were presented with an \textbf{enabling sentence} (\emph{Yesterday, Bill bought a pack of cigarettes.}) %that sought to reinforce the past frequency that aimed to increase the acceptability of the habitual sentence when the past frequency evidence was not strong. 
-The final third of trials had no additional evidence and were identical to Expt.~1b. 
+The final third of trials had no additional evidence and were identical to Expt.~2. 
 
 \subsubsection{Materials}
 
 Twenty-one of the original thirty-one items were used in order to shorten the experiment.
-To increase expected variability, participants saw only the frequencies that led to the maximal and minimal endorsements of the habitual in Expt.~2. 
-In addition, we did not include trials for both male and female names for the select items we did in Expt.~1b, since we saw no differences in their endorsements of the habitual.
-This brings our total number of unique trials to 21 items x 2 frequency levels = 42, for each of 3 conditions.
-The dependent measure was the same as in Expt.~1b. 
+To increase expected variability, participants saw the frequencies that led to most intermediate endorsement of the habitual in Expt.~2. 
+In addition, we did not include trials for both male and female names for the select items we did in Expt.~2, since we saw no differences in their endorsements of the habitual.
+The dependent measure was the same as in Expt.~2. 
 The experiment in full can be viewed at \url{http://stanford.edu/~mtessler/habituals/experiments/truth-judgments/tj-3-preventative.html}.
 
 \subsection{Behavioral results}
 
+Figure \ref{fig:tj3} shows the results of the experiment, together with the analogous data from Expt.~2. 
+
+
 Our results suggest the underlying scale for habituals is \emph{predictive} frequency of action, and that habituals are used to talk about future predictions of people's actions.
 
-\subsection{Model results}
+%\subsection{Model results}
 
 
 \section{Discussion}
