comments on intro

--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -66,6 +66,7 @@
 
 
 \begin{abstract}
+\ndg{the basic framing shouldn't be habituals vs generics. it should be how do habituals work to convey generalizations about events? and then the analogy with generics motivates our approach...}
 Habitual sentences (e.g. \emph{Bills smokes.}) generalize an event over time and are thought to have similarly puzzling qualities as generic sentences (e.g. \emph{Dogs bark.}). 
 Little empirical work has tested this relation with respect to the truth conditions of these sentences. 
 We test the analogy between habitual and generic language by applying a recent formal theory of generic language to the domain of events.
@@ -83,11 +84,12 @@ Methodological implications from this are discussed.
 events; generics; pragmatics; Bayesian data analysis; Bayesian cognitive model
 \end{abstract}
 
+\ndg{need to revise this intro with some strong perspective taking: your target audience is smart cogsci people who don't know that much about these topics (think josh t).}
 
 If you learn that Bill smoked a cigarette exactly three times last month, would you say that \emph{Bill smokes}?
-Habitual sentences like \emph{Bill smokes.} describe generalizations about events and have similarly puzzling qualities to generic sentences (e.g. \emph{Swans are white.}) which convey generalizations about categories \cite{Carlson2005}.
+Habitual sentences like \emph{Bill smokes.} describe generalizations about events and have similarly puzzling qualities to generic sentences (e.g. \emph{Swans are white.}) which convey generalizations about categories \cite{Carlson2005}. \ndg{what puzzling qualities? don't assume readers already know about generics...}
 Generic language is central to how we communicate and learn about categories \cite{Carlson1977, Gelman2004}, and has received a lot of attention from psychologists, linguists, and philosophers.
-Habitual language is presumably similarly important to our intuitive theories of people and behavior.
+Habitual language is presumably similarly important to our intuitive theories of events, especially the activities of people.
 Yet surprisingly little empirical work has looked into the basic properties of habitual sentences.
 
 Habitual sentences are interesting because they are likely central to our theories of other people. 
